[gd_scene load_steps=8 format=2]

[ext_resource path="res://Assets/Fonts/Normal.tres" type="DynamicFont" id=1]
[ext_resource path="res://Scripts/InventoryViewer.gd" type="Script" id=2]
[ext_resource path="res://DarkTheme.tres" type="Theme" id=3]
[ext_resource path="res://Assets/Icons/ReturnIcon.png" type="Texture" id=4]

[sub_resource type="GDScript" id=1]
script/source = "extends AcceptDialog

var selected_index = \"\"
"

[sub_resource type="InputEventAction" id=2]
action = "ui_esc"

[sub_resource type="ShortCut" id=3]
shortcut = SubResource( 2 )

[node name="InventoryViewer" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScrollContainer" type="ScrollContainer" parent="Panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -472.0
margin_top = -300.0
margin_right = 374.0
margin_bottom = 300.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/ScrollContainer"]
margin_right = 831.0
margin_bottom = 34.0
custom_constants/separation = 20
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/ScrollContainer/HBoxContainer"]
margin_right = 36.0
margin_bottom = 34.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Panel/ScrollContainer/HBoxContainer/VBoxContainer"]
margin_right = 36.0
margin_bottom = 30.0
custom_fonts/font = ExtResource( 1 )
text = "index"
align = 1
valign = 1

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/ScrollContainer/HBoxContainer/VBoxContainer"]
margin_top = 34.0
margin_right = 36.0
margin_bottom = 34.0

[node name="VSeparator" type="VSeparator" parent="Panel/ScrollContainer/HBoxContainer"]
margin_left = 56.0
margin_right = 60.0
margin_bottom = 34.0

[node name="VBoxContainer2" type="VBoxContainer" parent="Panel/ScrollContainer/HBoxContainer"]
margin_left = 80.0
margin_right = 116.0
margin_bottom = 34.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Panel/ScrollContainer/HBoxContainer/VBoxContainer2"]
margin_right = 36.0
margin_bottom = 30.0
custom_fonts/font = ExtResource( 1 )
text = "NAME"
align = 1
valign = 1

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/ScrollContainer/HBoxContainer/VBoxContainer2"]
margin_top = 34.0
margin_right = 36.0
margin_bottom = 34.0

[node name="VSeparator2" type="VSeparator" parent="Panel/ScrollContainer/HBoxContainer"]
margin_left = 136.0
margin_right = 140.0
margin_bottom = 34.0

[node name="VBoxContainer3" type="VBoxContainer" parent="Panel/ScrollContainer/HBoxContainer"]
margin_left = 160.0
margin_right = 255.0
margin_bottom = 34.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Panel/ScrollContainer/HBoxContainer/VBoxContainer3"]
margin_right = 95.0
margin_bottom = 30.0
custom_fonts/font = ExtResource( 1 )
text = "BASE_DAMAGE"
align = 1
valign = 1

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/ScrollContainer/HBoxContainer/VBoxContainer3"]
margin_top = 34.0
margin_right = 95.0
margin_bottom = 34.0

[node name="VSeparator3" type="VSeparator" parent="Panel/ScrollContainer/HBoxContainer"]
margin_left = 275.0
margin_right = 279.0
margin_bottom = 34.0

[node name="VBoxContainer4" type="VBoxContainer" parent="Panel/ScrollContainer/HBoxContainer"]
margin_left = 299.0
margin_right = 392.0
margin_bottom = 34.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Panel/ScrollContainer/HBoxContainer/VBoxContainer4"]
margin_right = 93.0
margin_bottom = 30.0
custom_fonts/font = ExtResource( 1 )
text = "BASE_DEFENSE"
align = 1
valign = 1

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/ScrollContainer/HBoxContainer/VBoxContainer4"]
margin_top = 34.0
margin_right = 93.0
margin_bottom = 34.0

[node name="VSeparator4" type="VSeparator" parent="Panel/ScrollContainer/HBoxContainer"]
margin_left = 412.0
margin_right = 416.0
margin_bottom = 34.0

[node name="VBoxContainer5" type="VBoxContainer" parent="Panel/ScrollContainer/HBoxContainer"]
margin_left = 436.0
margin_right = 534.0
margin_bottom = 34.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Panel/ScrollContainer/HBoxContainer/VBoxContainer5"]
margin_right = 98.0
margin_bottom = 30.0
custom_fonts/font = ExtResource( 1 )
text = "REQUIREMENTS"
align = 1
valign = 1

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/ScrollContainer/HBoxContainer/VBoxContainer5"]
margin_top = 34.0
margin_right = 98.0
margin_bottom = 34.0

[node name="VSeparator5" type="VSeparator" parent="Panel/ScrollContainer/HBoxContainer"]
margin_left = 554.0
margin_right = 558.0
margin_bottom = 34.0

[node name="VBoxContainer6" type="VBoxContainer" parent="Panel/ScrollContainer/HBoxContainer"]
margin_left = 578.0
margin_right = 651.0
margin_bottom = 34.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Panel/ScrollContainer/HBoxContainer/VBoxContainer6"]
margin_right = 73.0
margin_bottom = 30.0
custom_fonts/font = ExtResource( 1 )
text = "DURABILITY"
align = 1
valign = 1

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/ScrollContainer/HBoxContainer/VBoxContainer6"]
margin_top = 34.0
margin_right = 73.0
margin_bottom = 34.0

[node name="VSeparator6" type="VSeparator" parent="Panel/ScrollContainer/HBoxContainer"]
margin_left = 671.0
margin_right = 675.0
margin_bottom = 34.0

[node name="VBoxContainer7" type="VBoxContainer" parent="Panel/ScrollContainer/HBoxContainer"]
margin_left = 695.0
margin_right = 740.0
margin_bottom = 34.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Panel/ScrollContainer/HBoxContainer/VBoxContainer7"]
margin_right = 45.0
margin_bottom = 30.0
custom_fonts/font = ExtResource( 1 )
text = "RARITY"
align = 1
valign = 1

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/ScrollContainer/HBoxContainer/VBoxContainer7"]
margin_top = 34.0
margin_right = 45.0
margin_bottom = 34.0

[node name="VSeparator7" type="VSeparator" parent="Panel/ScrollContainer/HBoxContainer"]
margin_left = 760.0
margin_right = 764.0
margin_bottom = 34.0

[node name="VBoxContainer8" type="VBoxContainer" parent="Panel/ScrollContainer/HBoxContainer"]
margin_left = 784.0
margin_right = 831.0
margin_bottom = 34.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Panel/ScrollContainer/HBoxContainer/VBoxContainer8"]
margin_right = 47.0
margin_bottom = 30.0
custom_fonts/font = ExtResource( 1 )
text = "ABILITY"
align = 1
valign = 1

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/ScrollContainer/HBoxContainer/VBoxContainer8"]
margin_top = 34.0
margin_right = 47.0
margin_bottom = 34.0

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -120.0
margin_top = -300.0
margin_right = -20.0
margin_bottom = 300.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="Panel/VBoxContainer"]
margin_top = 214.0
margin_right = 100.0
margin_bottom = 254.0
rect_min_size = Vector2( 100, 0 )
custom_fonts/font = ExtResource( 1 )
text = "ADD"

[node name="Button2" type="Button" parent="Panel/VBoxContainer"]
margin_top = 258.0
margin_right = 100.0
margin_bottom = 298.0
rect_min_size = Vector2( 100, 0 )
custom_fonts/font = ExtResource( 1 )
text = "REMOVE"

[node name="Button3" type="Button" parent="Panel/VBoxContainer"]
margin_top = 302.0
margin_right = 100.0
margin_bottom = 342.0
text = "EDIT"

[node name="Button4" type="Button" parent="Panel/VBoxContainer"]
margin_top = 346.0
margin_right = 100.0
margin_bottom = 386.0
rect_min_size = Vector2( 100, 0 )
custom_fonts/font = ExtResource( 1 )
text = "LOAD"

[node name="FileDialog" type="FileDialog" parent="."]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 3 )
window_title = "Open a File"
dialog_text = "Selecione o perfil que voce deseja caregar"
mode = 0
access = 1
current_dir = "user://"
current_path = "user://"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AcceptDialog" type="AcceptDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -114.0
margin_top = -215.5
margin_right = 114.0
margin_bottom = 215.5
window_title = "Adicionar Item"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScrollContainer" type="ScrollContainer" parent="AcceptDialog"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -106.0
margin_top = -207.5
margin_right = 106.0
margin_bottom = 159.5
scroll_horizontal_enabled = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="AcceptDialog/ScrollContainer"]
margin_right = 200.0
margin_bottom = 542.0

[node name="Label" type="Label" parent="AcceptDialog/ScrollContainer/VBoxContainer"]
margin_right = 200.0
margin_bottom = 30.0
rect_min_size = Vector2( 200, 0 )
custom_fonts/font = ExtResource( 1 )
text = "name"
align = 1
valign = 1

[node name="LineEdit" type="LineEdit" parent="AcceptDialog/ScrollContainer/VBoxContainer"]
margin_top = 34.0
margin_right = 200.0
margin_bottom = 74.0
rect_min_size = Vector2( 200, 0 )
custom_fonts/font = ExtResource( 1 )

[node name="Label2" type="Label" parent="AcceptDialog/ScrollContainer/VBoxContainer"]
margin_top = 78.0
margin_right = 200.0
margin_bottom = 108.0
rect_min_size = Vector2( 200, 0 )
custom_fonts/font = ExtResource( 1 )
text = "BASE_DAMAGE"
align = 1
valign = 1

[node name="LineEdit2" type="LineEdit" parent="AcceptDialog/ScrollContainer/VBoxContainer"]
margin_top = 112.0
margin_right = 200.0
margin_bottom = 152.0
rect_min_size = Vector2( 200, 0 )
custom_fonts/font = ExtResource( 1 )

[node name="Label3" type="Label" parent="AcceptDialog/ScrollContainer/VBoxContainer"]
margin_top = 156.0
margin_right = 200.0
margin_bottom = 186.0
rect_min_size = Vector2( 200, 0 )
custom_fonts/font = ExtResource( 1 )
text = "BASE_DEFENSE"
align = 1
valign = 1

[node name="LineEdit3" type="LineEdit" parent="AcceptDialog/ScrollContainer/VBoxContainer"]
margin_top = 190.0
margin_right = 200.0
margin_bottom = 230.0
rect_min_size = Vector2( 200, 0 )
custom_fonts/font = ExtResource( 1 )

[node name="Label4" type="Label" parent="AcceptDialog/ScrollContainer/VBoxContainer"]
margin_top = 234.0
margin_right = 200.0
margin_bottom = 264.0
rect_min_size = Vector2( 200, 0 )
custom_fonts/font = ExtResource( 1 )
text = "REQUIREMENTS"
align = 1
valign = 1

[node name="LineEdit4" type="LineEdit" parent="AcceptDialog/ScrollContainer/VBoxContainer"]
margin_top = 268.0
margin_right = 200.0
margin_bottom = 308.0
rect_min_size = Vector2( 200, 0 )
custom_fonts/font = ExtResource( 1 )

[node name="Label5" type="Label" parent="AcceptDialog/ScrollContainer/VBoxContainer"]
margin_top = 312.0
margin_right = 200.0
margin_bottom = 342.0
rect_min_size = Vector2( 200, 0 )
custom_fonts/font = ExtResource( 1 )
text = "DURABILITY"
align = 1
valign = 1

[node name="LineEdit5" type="LineEdit" parent="AcceptDialog/ScrollContainer/VBoxContainer"]
margin_top = 346.0
margin_right = 200.0
margin_bottom = 386.0
rect_min_size = Vector2( 200, 0 )
custom_fonts/font = ExtResource( 1 )

[node name="Label6" type="Label" parent="AcceptDialog/ScrollContainer/VBoxContainer"]
margin_top = 390.0
margin_right = 200.0
margin_bottom = 420.0
rect_min_size = Vector2( 200, 0 )
custom_fonts/font = ExtResource( 1 )
text = "RARITY"
align = 1
valign = 1

[node name="LineEdit6" type="LineEdit" parent="AcceptDialog/ScrollContainer/VBoxContainer"]
margin_top = 424.0
margin_right = 200.0
margin_bottom = 464.0
rect_min_size = Vector2( 200, 0 )
custom_fonts/font = ExtResource( 1 )

[node name="Label7" type="Label" parent="AcceptDialog/ScrollContainer/VBoxContainer"]
margin_top = 468.0
margin_right = 200.0
margin_bottom = 498.0
rect_min_size = Vector2( 200, 0 )
custom_fonts/font = ExtResource( 1 )
text = "ABILITY"
align = 1
valign = 1

[node name="LineEdit7" type="LineEdit" parent="AcceptDialog/ScrollContainer/VBoxContainer"]
margin_top = 502.0
margin_right = 200.0
margin_bottom = 542.0
rect_min_size = Vector2( 200, 0 )
custom_fonts/font = ExtResource( 1 )

[node name="AcceptDialog2" type="AcceptDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -147.5
margin_top = -53.0
margin_right = 147.5
margin_bottom = 53.0
window_title = "Remover Item"

[node name="VBoxContainer" type="VBoxContainer" parent="AcceptDialog2"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -139.5
margin_top = -61.0
margin_right = 139.5
margin_bottom = 13.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="AcceptDialog2/VBoxContainer"]
margin_right = 279.0
margin_bottom = 30.0
custom_fonts/font = ExtResource( 1 )
text = "INDEX"
align = 1
valign = 1

[node name="LineEdit" type="LineEdit" parent="AcceptDialog2/VBoxContainer"]
margin_top = 34.0
margin_right = 279.0
margin_bottom = 58.0
rect_min_size = Vector2( 100, 0 )
align = 1

[node name="AcceptDialog3" type="AcceptDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -157.5
margin_top = -69.0
margin_right = 157.5
margin_bottom = 69.0
window_title = "Editar Item"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="AcceptDialog3"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -149.5
margin_top = -61.0
margin_right = 149.5
margin_bottom = 13.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="AcceptDialog3/VBoxContainer"]
margin_right = 299.0
margin_bottom = 30.0
custom_fonts/font = ExtResource( 1 )
text = "INDEX"
align = 1
valign = 1

[node name="LineEdit" type="LineEdit" parent="AcceptDialog3/VBoxContainer"]
margin_top = 34.0
margin_right = 299.0
margin_bottom = 74.0
rect_min_size = Vector2( 100, 0 )
align = 1

[node name="AcceptDialog4" type="AcceptDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -166.5
margin_top = -190.5
margin_right = 166.5
margin_bottom = 190.5
window_title = "Editar Item"
script = SubResource( 1 )

[node name="ScrollContainer" type="ScrollContainer" parent="AcceptDialog4"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -158.5
margin_top = -182.5
margin_right = 158.5
margin_bottom = 134.5
scroll_horizontal_enabled = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="AcceptDialog4/ScrollContainer"]
margin_right = 299.0
margin_bottom = 542.0

[node name="Label" type="Label" parent="AcceptDialog4/ScrollContainer/VBoxContainer"]
margin_right = 299.0
margin_bottom = 30.0
rect_min_size = Vector2( 299, 0 )
custom_fonts/font = ExtResource( 1 )
text = "name"
align = 1
valign = 1

[node name="LineEdit" type="LineEdit" parent="AcceptDialog4/ScrollContainer/VBoxContainer"]
margin_top = 34.0
margin_right = 299.0
margin_bottom = 74.0
rect_min_size = Vector2( 299, 0 )
custom_fonts/font = ExtResource( 1 )
align = 1

[node name="Label2" type="Label" parent="AcceptDialog4/ScrollContainer/VBoxContainer"]
margin_top = 78.0
margin_right = 299.0
margin_bottom = 108.0
rect_min_size = Vector2( 299, 0 )
custom_fonts/font = ExtResource( 1 )
text = "BASE_DAMAGE"
align = 1
valign = 1

[node name="LineEdit2" type="LineEdit" parent="AcceptDialog4/ScrollContainer/VBoxContainer"]
margin_top = 112.0
margin_right = 299.0
margin_bottom = 152.0
rect_min_size = Vector2( 299, 0 )
custom_fonts/font = ExtResource( 1 )
align = 1

[node name="Label3" type="Label" parent="AcceptDialog4/ScrollContainer/VBoxContainer"]
margin_top = 156.0
margin_right = 299.0
margin_bottom = 186.0
rect_min_size = Vector2( 299, 0 )
custom_fonts/font = ExtResource( 1 )
text = "BASE_DEFENSE"
align = 1
valign = 1

[node name="LineEdit3" type="LineEdit" parent="AcceptDialog4/ScrollContainer/VBoxContainer"]
margin_top = 190.0
margin_right = 299.0
margin_bottom = 230.0
rect_min_size = Vector2( 299, 0 )
custom_fonts/font = ExtResource( 1 )
align = 1

[node name="Label4" type="Label" parent="AcceptDialog4/ScrollContainer/VBoxContainer"]
margin_top = 234.0
margin_right = 299.0
margin_bottom = 264.0
rect_min_size = Vector2( 299, 0 )
custom_fonts/font = ExtResource( 1 )
text = "REQUIREMENTS"
align = 1
valign = 1

[node name="LineEdit4" type="LineEdit" parent="AcceptDialog4/ScrollContainer/VBoxContainer"]
margin_top = 268.0
margin_right = 299.0
margin_bottom = 308.0
rect_min_size = Vector2( 299, 0 )
custom_fonts/font = ExtResource( 1 )
align = 1

[node name="Label5" type="Label" parent="AcceptDialog4/ScrollContainer/VBoxContainer"]
margin_top = 312.0
margin_right = 299.0
margin_bottom = 342.0
rect_min_size = Vector2( 299, 0 )
custom_fonts/font = ExtResource( 1 )
text = "DURABILITY"
align = 1
valign = 1

[node name="LineEdit5" type="LineEdit" parent="AcceptDialog4/ScrollContainer/VBoxContainer"]
margin_top = 346.0
margin_right = 299.0
margin_bottom = 386.0
rect_min_size = Vector2( 299, 0 )
custom_fonts/font = ExtResource( 1 )
align = 1

[node name="Label6" type="Label" parent="AcceptDialog4/ScrollContainer/VBoxContainer"]
margin_top = 390.0
margin_right = 299.0
margin_bottom = 420.0
rect_min_size = Vector2( 299, 0 )
custom_fonts/font = ExtResource( 1 )
text = "RARITY"
align = 1
valign = 1

[node name="LineEdit6" type="LineEdit" parent="AcceptDialog4/ScrollContainer/VBoxContainer"]
margin_top = 424.0
margin_right = 299.0
margin_bottom = 464.0
rect_min_size = Vector2( 299, 0 )
custom_fonts/font = ExtResource( 1 )
align = 1

[node name="Label7" type="Label" parent="AcceptDialog4/ScrollContainer/VBoxContainer"]
margin_top = 468.0
margin_right = 299.0
margin_bottom = 498.0
rect_min_size = Vector2( 299, 0 )
custom_fonts/font = ExtResource( 1 )
text = "ABILITY"
align = 1
valign = 1

[node name="LineEdit7" type="LineEdit" parent="AcceptDialog4/ScrollContainer/VBoxContainer"]
margin_top = 502.0
margin_right = 299.0
margin_bottom = 542.0
rect_min_size = Vector2( 299, 0 )
custom_fonts/font = ExtResource( 1 )
align = 1

[node name="AcceptDialog5" type="AcceptDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -78.5
margin_top = -47.0
margin_right = 78.5
margin_bottom = 47.0
window_title = "Error"
dialog_text = "Index não existente"

[node name="TextureButton" type="TextureButton" parent="."]
anchor_left = 0.942
anchor_right = 1.0
anchor_bottom = 0.098
margin_left = 0.391968
margin_bottom = 0.199997
hint_tooltip = "Voltar para o menu

Atalho: Esc"
shortcut_in_tooltip = false
shortcut = SubResource( 3 )
texture_normal = ExtResource( 4 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="button_down" from="Panel/VBoxContainer/Button" to="." method="_on_Button_button_down"]
[connection signal="button_down" from="Panel/VBoxContainer/Button2" to="." method="_on_Button2_button_down"]
[connection signal="button_down" from="Panel/VBoxContainer/Button3" to="." method="_on_Button3_button_down"]
[connection signal="button_down" from="Panel/VBoxContainer/Button4" to="." method="_on_Button4_button_down"]
[connection signal="file_selected" from="FileDialog" to="." method="_on_FileDialog_file_selected"]
[connection signal="confirmed" from="AcceptDialog" to="." method="_on_AcceptDialog_confirmed"]
[connection signal="confirmed" from="AcceptDialog2" to="." method="_on_AcceptDialog2_confirmed"]
[connection signal="confirmed" from="AcceptDialog3" to="." method="_on_AcceptDialog3_confirmed"]
[connection signal="confirmed" from="AcceptDialog4" to="." method="_on_AcceptDialog4_confirmed"]
[connection signal="button_down" from="TextureButton" to="." method="_on_TextureButton_button_down"]
